Features:
X and Y speed on each logo
clicking on Most hits in the top left will freeze all dvds with the most hits
and bring your mouse to one of them
rendering dvds/options first actually works now
LALT + Middle click moves Logos to the average posisition
LSHIFT + LALT + Middle click moves them to the middle
the average position DVD can be stopped by clicking it
added distance from center on avgpos dvd
info on avg pos dvd both can be toggled on/off individually
Open Screenshots and Open Logos buttons in main menu
Json for controling the colors/fonts in the main menu


Improvements:
better controls
each info can be toggled on logos
bug fixes
slight main menu redesign
defaults.txt is now a json instead

Technical changes:
moved everything from globalfuncs.py to Main.py
removed the vars function finally
improved the DVDS and Options classes
the average position Logo is now more integrated with it's class

Removed:
disney + pixar random movies